--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,23 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+
+
+buildscript {
+    ext.navigationVersion = "2.3.0"
+    ext.room_version = '2.4.0-beta01'
+    ext.coroutine_version = '1.3.7'
+
+    dependencies {
+        classpath ("androidx.navigation:navigation-safe-args-gradle-plugin:$navigationVersion")
+
+    }
+}
+
 plugins {
-    id 'com.android.application' version '7.2.1' apply false
-    id 'com.android.library' version '7.2.1' apply false
+    id 'com.android.application' version '7.1.2' apply false
+    id 'com.android.library' version '7.1.2' apply false
     id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
+
+
 }
 
 task clean(type: Delete) {
